crates/rune-derive/tests/ui/fail_missing_id.stderr
error: missing required rune attribute: id
 --> tests/ui/fail_missing_id.rs:5:8
  |
5 | struct MissingIdContract {
  |        ^^^^^^^^^^^^^^^^^
