crates/rune-derive/tests/ui/fail_missing_id.rs
use rune_derive::RuneContract as DeriveRuneContract;

#[derive(DeriveRuneContract)]
#[rune(version = "v0", kind = "entity")]
struct MissingIdContract {
    id: String,
}

fn main() {}
